--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "koa-echart-server",
   "version": "1.0.0",
-  "description": "",
+  "description": "koa-echart-server",
   "main": "index.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
